// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> component does match to the snapshot 1`] = `
<label
  className="label custom-style"
>
  <span
    className="label__content"
  >
    text-content
  </span>
</label>
`;

exports[`<Label /> default props component does match to the snapshot 1`] = `
<label
  className="label "
>
  <span
    className="label__content"
  >
    mote of texts
  </span>
</label>
`;
